# CasperSecure

./: .gitignore  CHANGELOG.md  Cargo.toml  GUIDE.md  README.md
archive/: RELEASE_NOTES_V5.md
crates/analyzer/: Cargo.toml
crates/analyzer/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/contract/: Cargo.toml  README.md
crates/contract/src/: lib.rs
crates/detector/: Cargo.toml
crates/detector/src/: lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs
examples/: vulnerable_contract.rs
