[workspace]
members = [
    "crates/parser",
    "crates/analyzer",
    "crates/detector",
    "crates/cli",
    "crates/contract",
]
# Default members excludes contract (requires wasm32 target)
default-members = [
    "crates/parser",
    "crates/analyzer",
    "crates/detector",
    "crates/cli",
]
resolver = "2"

[workspace.package]
version = "6.0.0"
edition = "2021"
authors = ["CasperSecure Team"]
license = "MIT"

[workspace.dependencies]
# Rust parsing
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
