[package]
name = "casper-detector"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
casper-parser = { path = "../parser" }
casper-analyzer = { path = "../analyzer" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
